--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.4.32",
     "@types/chai": "^4.2.8",
     "@types/extract-zip": "^1.6.2",
     "@types/glob": "^7.1.1",
@@ -65,13 +66,13 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "glob": "^7.1.5",
-    "mocha": "^6.2.2",
+    "mocha": "^7.1.1",
     "prettier": "^1.19.1",
     "typescript": "^3.3.1",
     "vscode-test": "^1.3.0"
   },
   "dependencies": {
-    "extract-zip": "^1.6.7",
+    "adm-zip": "^0.4.14",
     "node-fetch": "^2.6.0"
   }
 }
